--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav>
-      <h1>Naveen.</h1>
+      <h1>Myportfolio.</h1>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="#section-Project" >My Projects</a></li>
@@ -21,7 +21,7 @@
     <div class="heading">
       <div class="texts">
         <h3>Hello, It's Me</h3>
-        <h1>Naveen</h1>
+        <h1>Periyakaruppan</h1>
         <h3>And I'm a <span class="text"></span></h3>
       </div>
     </div>
