--- a/contact/contact.html
+++ b/contact/contact.html
@@ -45,7 +45,7 @@
            <div class="social-media">
         <a href="https://github.com/Periyakaruppan00"><box-icon type='logo' name='github'></box-icon></a>
         <a href="https://www.instagram.com/itsme_naveen30?igsh=NDJ4bXFlOWFvYm9t"><box-icon name='instagram' type='logo' ></box-icon></a>
-        <a href="linkedin.com/in/periya-karuppan-56009424a"><box-icon name='linkedin-square' type='logo' ></box-icon></a>
+        <a href="https://www.linkedin.com/in/periya-karuppan-56009424a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BzxYl%2Bi8aS9OQ5rNi74DaQw%3D%3D"><box-icon name='linkedin-square' type='logo' ></box-icon></a>
       </div>
     </td>
     </tr>
