--- a/contact/contact.html
+++ b/contact/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://kit.fontawesome.com/dd206d8748.js" crossorigin="anonymous"></script>
     <link rel="icon" href="videos/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,9 +43,9 @@
             <tr>
                 <td>
            <div class="social-media">
-        <a href="https://github.com/Periyakaruppan00"><box-icon type='logo' name='github'></box-icon></a>
-        <a href="https://www.instagram.com/itsme_naveen30?igsh=NDJ4bXFlOWFvYm9t"><box-icon name='instagram' type='logo' ></box-icon></a>
-        <a href="https://www.linkedin.com/in/periya-karuppan-56009424a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BzxYl%2Bi8aS9OQ5rNi74DaQw%3D%3D"><box-icon name='linkedin-square' type='logo' ></box-icon></a>
+        <a href="https://github.com/Periyakaruppan00"><i class="fa-brands fa-github" style="color: #000000;"></i></a>
+        <a href="https://www.instagram.com/story_of_mylife30?igsh=MTUxaWY4OTU3Y3F6ZA=="><box-icon name='instagram' type='logo' ><i class="fa-brands fa-square-instagram" style="color: #000000;"></i></a>
+        <a href="https://www.linkedin.com/in/periya-karuppan-56009424a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BzxYl%2Bi8aS9OQ5rNi74DaQw%3D%3D"><box-icon name='linkedin-square' type='logo' ><i class="fa-brands fa-linkedin" style="color: #000000;"></i></a>
       </div>
     </td>
     </tr>
