--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <div class="heading">
       <div class="texts">
-        <h3>Hello, It's Me</h3>
+        <h3>Hello, My self</h3>
         <h1>Periyakaruppan</h1>
         <h3>And I'm a <span class="text"></span></h3>
       </div>
