--- a/contact/contact.html
+++ b/contact/contact.html
@@ -51,7 +51,7 @@
     </tr>
     <tr>
         <td>
-            <a href="/index.html" class="Home">Home</a>
+            <a href="../index.html" class="Home">Home</a>
         </td>
     </tr>
             </form>
