--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <br>
       <br>
       <h1>About me</h1>
-      <p>Hello, I'm Naveen, a passionate frontend developer dedicated to crafting
+      <p>Hello, I'm Periyakaruppan, a passionate frontend developer dedicated to crafting
         engaging and user-friendly web experiences. With a keen eye for detail and a love for clean code, I
         thrive on turning ideas into intuitive interfaces that captivate and inspire. My journey in web
         development has been fueled by curiosity and a relentless drive to learn and adapt to the ever-evolving
